--- a/cv.html
+++ b/cv.html
@@ -50,3 +50,44 @@
     <h2>Skills</h2>
 
     <ul>
+        <li>Scientific programming</li>
+        <li>Computational modelling</li>
+        <li>Big data handling</li>
+        <li>Earth observation data processing</li>
+        <li>Scientific writing</li>
+        <li>Project management</li>
+    </ul>
+
+    <h2>Publications</h2>
+
+    <p>You can find an up to date list of publications I have contributed to <a href="https://scholar.google.com/citations?user=7BUpIaMAAAAJ&hl=en&oi=ao">here</a>.</p>
+
+    <h2>Talks</h2>
+
+    <p><em>(Replace this with actual talk list if available)</em></p>
+    <ul>
+      <li>Talk 1</li>
+      <li>Talk 2</li>
+    </ul>
+
+    <h2>Teaching</h2>
+
+    <p><em>(Replace this with actual teaching list if available)</em></p>
+    <ul>
+      <li>Teaching 1</li>
+      <li>Teaching 2</li>
+    </ul>
+
+    <h2>Affiliations</h2>
+
+    <ul>
+        <li><a href="https://soils.org.uk">British Society of Soil Science</a></li>
+        <li><a href="https://www.britishecologicalsociety.org">British Ecological Society</a></li>
+        <li><a href="https://www.agu.org">American Geophysical Union</a></li>
+        <li><a href="https://www.egu.eu">European Geosciences Union</a></li>
+        <li><a href="https://iemss.org">International Environmental Modelling and Software Society</a></li>
+        <li><a href="https://web.tee.gr/en/">Technical Chamber of Greece</a></li>
+    </ul>
+
+</body>
+</html>
